@@ -10,5 +10,6 @@ module t ();
       forever begin end
       // verilator lint_off UNSIGNED
       for (reg [31:0] i=0; i>=0; i=i+1) begin end
+      $display;  // So loop not eaten
    end
 endmodule
